create and delete work properly, mobdebug support

--- a/nginx.conf
+++ b/nginx.conf
@@ -8,6 +8,8 @@ events {
 
 http {
   include mime.types;
+  lua_package_path '/opt/zbstudio/lualibs/?/?.lua;/opt/zbstudio/lualibs/?.lua;;';
+  lua_package_cpath '/opt/zbstudio/bin/linux/x64/clibs/?.so;;';
 
   server {
     listen ${{PORT}};
@@ -15,9 +17,7 @@ http {
 
     location / {
       default_type text/html;
-      content_by_lua '
-        require("lapis").serve("app")
-      ';
+      content_by_lua 'require("mobdebug").start(); require("lapis").serve(require("app"))';
     }
 
     location /static/ {
